<resources>
    <string name="app_name">Помощник инвестора</string>

    <!-- settingsLayout -->
    <string name="calc_tax">Учитывать налоги</string>
    <string name="amount">13%</string>
    <string name="hide_cent">Скрыть копейки</string>



    <!-- MainLayout -->
    <string name="full_cost">Итого: </string>
    <string name="rub">RUB</string>
    <string name="usd">USD</string>
    <string name="start_amount">0</string>
    <string name="currency">P</string>

    <!-- SettingButton in MainLayout -->
    <string name="open_settings">Настройки</string>



    <!-- add_asset_layout -->
    <string name="obligation">Облигации</string>
    <string name="stock">Акции</string>
    <string name="searching_hint">Введите название</string>




</resources>